# Perevodchik

./: CMakeLists.txt  LayoutFixer.cpp  LayoutFixer.h  License  MainWindow.cpp  MainWindow.h  Perevodchik.pro  PerevodchikSetup.iss  README.md  SettingsDialog.cpp  SettingsDialog.h  TextOverlayWidget.cpp  TextOverlayWidget.h  main.cpp
peprevodchik/: resources.qrc
peprevodchik/translations/: perevodchik_en.qm  perevodchik_en.ts  perevodchik_ru.qm  perevodchik_ru.ts  perevodchik_uk.qm  perevodchik_uk.ts
